--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2016/11/16/New_01_ok(3)_p1w5tlqpja60uda8.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2017/09/23/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(4)_r3hf7kcrrd0m7m8e.ipa</string> 
 
                 </dict>
 
