--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2017/09/23/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(4)_r3hf7kcrrd0m7m8e.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2017/09/27/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(5)_c0v0p2muhf6ydox9.ipa</string> 
 
                 </dict>
 
@@ -36,7 +36,7 @@
                      <key>bundle-identifier</key>  
                     <string>com.New-01.mh</string>  
                     <key>bundle-version</key>  
-                    <string>1.30.1</string>  
+                    <string>1.31.1</string>  
                     <key>kind</key>  
                     <string>software</string>  
                     <key>title</key>  
