--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/20/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(6)_fiv1lium2g6x9gwc.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/20/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01(1)-resigned_qd5h0gxssg4kja8c.ipa</string> 
 
                 </dict>
 
