--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/24/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01(2)-resigned_gq0pzpci8a7t7jdb.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/28/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(7)_cdr7sv922xcxdqm8.ipa</string> 
 
                 </dict>
 
