--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/31/天天魔盒_天天魔盒_New_01-resigned-resigned_skavuxujamhn8wdz.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/31/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned-resigned_p59h51wtg324op8c.ipa</string> 
 
                 </dict>
 
