--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2017/10/31/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned-resigned_p59h51wtg324op8c.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2017/12/01/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01(1)-resigned_a5i0ih1n28yyq6cw.ipa</string> 
 
                 </dict>
 
@@ -36,7 +36,7 @@
                      <key>bundle-identifier</key>  
                     <string>com.New-01.mh</string>  
                     <key>bundle-version</key>  
-                    <string>1.33.1</string>  
+                    <string>1.36.1</string>  
                     <key>kind</key>  
                     <string>software</string>  
                     <key>title</key>  
