--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2017/12/04/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(1)_d760iakmgv2gox5u.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/09/天天魔盒_New_01-resigned(2)_0uk1sp6cuvxg2hve.ipa</string> 
 
                 </dict>
 
