--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/09/天天魔盒_New_01-resigned(2)_0uk1sp6cuvxg2hve.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/09/_New_01-resigned(2)_jmvkj0xmi919e3no.ipa</string> 
 
                 </dict>
 
