--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/09/_New_01-resigned(2)_jmvkj0xmi919e3no.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/09/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(3)_gs5op2gcjn74brac.ipa</string> 
 
                 </dict>
 
