--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/09/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(3)_gs5op2gcjn74brac.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/10/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(5)_mjzz958w9q18pv96.ipa</string> 
 
                 </dict>
 
@@ -36,7 +36,7 @@
                      <key>bundle-identifier</key>  
                     <string>com.New-01.mh</string>  
                     <key>bundle-version</key>  
-                    <string>1.40.1</string>  
+                    <string>1.42.1</string>  
                     <key>kind</key>  
                     <string>software</string>  
                     <key>title</key>  
