--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/10/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(5)_mjzz958w9q18pv96.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/03/15/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned-resigned_l1dx3ws1tc5d0z8t.ipa</string> 
 
                 </dict>
 
