--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2018/04/02/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned(7)_81p5hw9x8wtorbru.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/04/27/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01-resigned_xnxlizsn5vdo7pdl.ipa</string> 
 
                 </dict>
 
@@ -36,7 +36,7 @@
                      <key>bundle-identifier</key>  
                     <string>com.New-01.mh</string>  
                     <key>bundle-version</key>  
-                    <string>2.0.1</string>  
+                    <string>2.1.1</string>  
                     <key>kind</key>  
                     <string>software</string>  
                     <key>title</key>  
