--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2018/11/05/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92New_01_enterprise_resigned_lnrdhs8tbv0r58dg.ipa</string> 
+                    <string>http://bige-th.b0.upaiyun.com/App/2018/11/10/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92New_01_enterprise_resigned(1)_vndht2e5dd30m88j.ipa</string> 
 
                 </dict>
 
