--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://bige-th.b0.upaiyun.com/App/2019/04/24/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92Payload_enterprise_resigned_lembc76ljc287vok.ipa</string> 
+                    <string>http://61cks.net/App/2019/06/04/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92New_01_enterprise_resigned_mt6dxiq2cp9yzt4n.ipa</string> 
 
                 </dict>
 
@@ -36,7 +36,7 @@
                      <key>bundle-identifier</key>  
                     <string>com.New-01.mh</string>  
                     <key>bundle-version</key>  
-                    <string>3.9.8</string>  
+                    <string>3.9.9</string>  
                     <key>kind</key>  
                     <string>software</string>  
                     <key>title</key>  
