--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>https://wyuq-ipa.oss-cn-shanghai.aliyuncs.com/app/2019/07/16/zbtJC4/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92New_01_enterprise_resigned_sign.ipa</string> 
+                    <string>http://61cks.net/App/2019/07/16/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92New_01_enterprise_resigned_sign_396q6j931h3sty7u.ipa</string> 
 
                 </dict>
 
