--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://61cks.net/App/2019/07/24/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92New_01_enterprise_resigned_sign_hdugwlv2aun0ypox.ipa</string> 
+                    <string>http://61cks.net/App/2019/07/25/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01_sign_rygxh853ia00ykv2.ipa</string> 
 
                 </dict>
 
@@ -36,7 +36,7 @@
                      <key>bundle-identifier</key>  
                     <string>com.New-01.mh</string>  
                     <key>bundle-version</key>  
-                    <string>3.9.9</string>  
+                    <string>3.10.9</string>  
                     <key>kind</key>  
                     <string>software</string>  
                     <key>title</key>  
