--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://61cks.net/App/2019/08/24/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01_sign_e97hp2e3ao8yf547.ipa</string> 
+                    <string>http://61cks.net/App/2019/08/25/天天魔盒_New_01_sign_foh17zy7k34qsv8j.ipa</string> 
 
                 </dict>
 
