--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>http://61cks.net/App/2019/08/25/天天魔盒_New_01_sign_foh17zy7k34qsv8j.ipa</string> 
+                    <string>http://61cks.net/App/2019/08/25/w_01_sign_2wedwt0tpybnyzz0.ipa</string> 
 
                 </dict>
 
