--- a/kk.plist
+++ b/kk.plist
@@ -23,7 +23,7 @@
 
                     <key>url</key>
 
-                    <string>天天魔盒https://wyuq-ipa.oss-cn-shanghai.aliyuncs.com/app/2019/08/25/seBq96/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01_sign.ipa</string> 
+                    <string>https://wyuq-ipa.oss-cn-shanghai.aliyuncs.com/app/2019/08/25/seBq96/%E5%A4%A9%E5%A4%A9%E9%AD%94%E7%9B%92_New_01_sign.ipa</string> 
 
                 </dict>
 
